<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            app:cardCornerRadius="8sp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/main_bg"
                android:padding="16sp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                   />

                <TextView
                    android:id="@+id/tvMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/something_went_wrong"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnOk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16sp"
                        android:text="@string/ok"
                        android:textAllCaps="false"
                        android:textSize="12sp"
                        android:backgroundTint="@color/cancel_bg"
                        app:backgroundTint="@null"
                        android:layout_weight="1"
                        app:cornerRadius="100sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16sp"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textSize="12sp"
                        android:visibility="visible"
                        android:backgroundTint="@color/cancel_bg"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        app:cornerRadius="100dp"
                        app:backgroundTint="@null" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</layout>