<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="itemData"
            type="com.altechhdd.viewModel.MaterialIssuanceViewModel" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edittext_bg"
        android:backgroundTint="@color/scanned_coil_bg"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingRight="8dp"

        android:paddingBottom="15dip"
        android:weightSum="4"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_baseline_cancel_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.30"
                android:gravity="center"
                android:text="@string/srfCoil">

            </TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.20"
                android:gravity="center"
                android:text="@string/width">

            </TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/weight_kg" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/source" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:paddingHorizontal="5dp">

            <TextView
                android:id="@+id/txt_ColilNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.30"
                android:gravity="center"
                android:text="1-045353535351"
                android:textColor="@color/black"
                android:textSize="12sp">

            </TextView>

            <TextView
                android:id="@+id/txt_Width"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.20"
                android:gravity="center"
                android:text="100"
                android:textColor="@color/black"
                android:textSize="12sp">

            </TextView>

            <TextView
                android:id="@+id/txt_WeightKg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="1000"
                android:textColor="@color/black"
                android:textSize="12sp">

            </TextView>

            <TextView
                android:id="@+id/txt_Source"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="P-10"
                android:textColor="@color/black"
                android:textSize="12sp">

            </TextView>


        </LinearLayout>
        <!--  <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:orientation="vertical">

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:text="@string/srfCoil">

              </TextView>



          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:orientation="vertical">

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:text="@string/width">

              </TextView>



          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:layout_weight="1"
              android:gravity="center"
              android:orientation="vertical">

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:text="@string/weightkg">

              </TextView>



          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:orientation="vertical">

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:text="@string/source">

              </TextView>


          </LinearLayout>
  -->
    </LinearLayout>

</layout>