<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.altechhdd.viewModel.MaterialIssuanceViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <include
                android:id="@+id/ll_Header"
                layout="@layout/layout_top_header"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!--  <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="20dp"
                  android:layout_marginRight="20dp"
                  android:paddingTop="15dip"
                  android:paddingBottom="15dip"
                  android:paddingLeft="20dp"
                  android:layout_marginTop="20dp"
                  android:background="@drawable/edittext_bg">
  &lt;!&ndash;
                  <ImageView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:gravity="center|start"
                      android:src="@drawable/location_icon">
                  </ImageView>&ndash;&gt;



              </LinearLayout>-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/edittext_bg"
                android:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:src="@drawable/location"/>


                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/edtLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:entries="@array/addresses_array"
                    android:imeOptions="actionNext"

                    android:spinnerMode="dropdown"
                    app:setOnItemSelectedListener="@{viewModel.clicksListener}"
                    app:adapter="@{viewModel.getLocationSpinnerAdapter}"/>

            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittext_bg"
                android:paddingLeft="20dp"
                android:paddingTop="15dip"
                android:paddingBottom="15dip">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:src="@drawable/plan"/>

                <TextView
                    android:id="@+id/edtPlan"
                 android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:background="@null"
                    android:gravity="center|start"
                    android:hint="@string/plan"

                    android:textColorHint="@color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp"
                    android:gravity="right">

                    <Switch
                        android:id="@+id/switch_Plan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llEnterPlan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edittext_bg"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dip"
                    android:paddingBottom="15dip">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center|start"
                        android:src="@drawable/plan_icon"></ImageView>

                    <EditText
                        android:id="@+id/edtEnterPlanNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:background="@null"
                        android:textColorHint="@color/black"
                        android:gravity="center|start"
                        android:hint="@string/enter_plan_number"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edittext_bg"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dip"
                    android:paddingBottom="15dip"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center|start"
                        android:src="@drawable/coil"></ImageView>

                    <EditText
                        android:id="@+id/edtCoil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:background="@null"
                        android:textColorHint="@color/black"
                        android:gravity="center|start"
                        android:hint="@string/srf"
                        android:text="@={viewModel.coilNumber}"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:src="@drawable/scanner_icon">

                </ImageView>

                <TextView
                    android:id="@+id/txt_ScannedCoils"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Scanned Coils (0)"
                    android:textColor="@color/black"
                    android:textStyle="bold"></TextView>


            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ScannedCoil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginRight="5sp"
                android:layout_toLeftOf="@+id/llSubmit"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_material_issaunce" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.5"
            android:gravity="bottom"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_Issue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/main_button_bg"
                android:padding="10dp"
                android:text="@string/issue"
                android:textColor="#ffffff"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_Cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/main_button_bg"
                android:backgroundTint="@color/cancel_bg"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="#ffffff"
                android:textStyle="bold"
                app:backgroundTint="@null" />

        </LinearLayout>

    </LinearLayout>


</layout>
